[package]
name = "sv"
version = "0.2.2"
edition = "2021"
license = "MIT"
authors = ["Leslie de Jager"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
repository = "https://github.com/ZimboPro/sv"

[package.metadata.wix]
upgrade-guid = "FB7A2531-E23B-43D9-B341-12545822B743"
path-guid = "2B3352CD-4EC5-46CC-BB9D-1AF7A66845D0"

[dependencies]
home = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
hcl-rs = "0.16.6"
oapi = { git = "https://github.com/ZimboPro/oapi.git" }
sppparse = "0.1.4"
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
# python-parser = "0.2.0"
# tera = "1.19.1"
merge-yaml-hash = "0.2.0"
yaml-rust = "0.4.5"
temp-file = "0.1.7"
clap-markdown = "0.1.3"
openapiv3 = "1.0.3"
simplelog = { version = "0.12.1", features = ["paris"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.4.3"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "x86_64-unknown-linux-gnu",
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"
